# o-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
agents/: base_agent.py  detective.py
app/: config.py  investigation_runner.py  main.py  web.py
app/agents/: detective.py  planner.py  summarizer.py
app/data/: context.json  countries.json  maindb.py  plonkit_full_database.json
app/examples/: detective_with_plonkit.py
app/images/: col.HEIC
app/prompts/: i2t.py  planner.py  summarizer.py
app/static/: index.html
app/tools/: base_tool.py  maindb_tool.py  osm_search.py  registry.py  web_scraper.py  web_search.py
app/tools/image_to_text/: env_pass_prompt.txt  image_to_text.py  metadata.py  norway2.HEIC  preprocessing.py  text_pass_prompt.txt
app/tools/plonkit_search/: PLONKIT_TOOL_SUMMARY.md  README.md  __init__.py  example_usage.py  plonkit_search.py
app/utils/: claude_to_json.py  download_database.py  download_html.py
testing/: test_detective.py
tools/: base_tool.py  registry.py  web_scraper.py  web_search.py
tools/image_to_text/: metadata.py  preprocessing.py
