[project]
name = "o-agent"
version = "0.1.0"
description = "Multi-agent OSINT system that autonomously plans investigations, collects open-source intelligence, validates findings, and generates structured reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.78.0",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langgraph>=1.0.8",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-prebuilt>=1.0.7",
    "langgraph-sdk>=0.3.4",
    "langsmith>=0.6.9",
    "pillow>=12.1.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
